# operations_research_2

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_gnuplot.c
concorde/: CMakeLists.txt  mincut.cpp  mincut.h  mincut.lib
include/: advanced_cplex.h  benders.h  branch_and_cut.h  compare.h  hard_fixing.h  heuristics.h  local_branching.h  matheuristic.h  plot.h  tabu_search.h  tsp.h  tsp_cplex.h  utilities.h  utilities_instance.h  utilities_solution.h  vns.h
scripts/exact_methods/: bc_stats.csv  bc_stats2.csv  bc_stats2_300.csv  bc_stats_300.csv  branch_and_cut_comp.bat  branch_and_cut_comp2.bat  exact_meth_comp.bat  exm_stats.csv
scripts/heuristics/: .gitignore  heu.bat  heu.csv  heu_2opt.bat  heu_MS.bat  heu_MS.csv
scripts/matheuristics/: hard_fixing_tuning.bat  hf_stats.csv  hf_stats2.csv  lb_stats.csv  lb_tuning.bat  matheu_comp.bat  matheu_comp.csv
scripts/metaheuristics/: .gitignore  all_metaheur_rep.bat  metaheur_comp.bat  metaheur_comp.csv  pp_commands.txt  ts_stats.csv  ts_tuning.bat  vns_stats.csv  vns_tuning.bat
src/: benders.c  branch_and_cut.c  compare.c  hard_fixing.c  heuristics.c  local_branching.c  main.c  matheuristic.c  plot.c  tabu_search.c  tsp_cplex.c  utilities.c  utilities_instance.c  utilities_solution.c  vns.c
test/: Makefile
test/data/: square.tsp
test/results/: VNSResults.csv
test/src/: test.c
